--- a/pom.xml
+++ b/pom.xml
@@ -46,14 +46,20 @@
         
     </dependencies>
     
+    
     <build>
     	<plugins>
+			<plugin>
+                 <groupId>org.springframework.boot</groupId>
+                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
     		<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+					<mainClass>abc.xyz.person.PersonMain</mainClass>
 				</configuration>
     		</plugin>
     	</plugins>
